correccion diseno fragment

--- a/assets/locales/en/translation.json
+++ b/assets/locales/en/translation.json
@@ -110,5 +110,80 @@
             "text": "Your message has been sent successfully. I’ll get back to you soon.",
             "close": "Close"
         }
+    },
+    "fragment": {
+        "title": "Fragment | Mateo Bonilla",
+        "projectTitle": "Fragment - Metroidvania",
+        "categoryTitle": "CATEGORY",
+        "category1": "Game Development",
+        "category2": "UX/UI Design",
+        "category3": "Storytelling",
+        "yearTitle": "YEAR",
+        "clientTitle": "CLIENT",
+        "client": "Indie Game",
+        "description1": "Fragment is a metroidvania inspired by the theme of schizophrenia. You progress to uncover the story while interacting with various characters who challenge your identity and reveal who you may truly be.",
+        "description2": "Tech & tools",
+        "video": "Promotional Video",
+        "menu": "Menu",
+        "pause": "Pause Menu",
+        "gameover": "Game Over Menu",
+        "projects": "Projects",
+        "objectivesTitle": "Project Objectives",
+        "objective1": {
+            "title": "Proposal",
+            "item1": "Raise awareness about a taboo illness.",
+            "item2": "Develop a project that brings visibility to the condition.",
+            "item3": "Promote understanding that in some cases, people can live a normal life."
+        },
+        "objective2": {
+            "title": "Research",
+            "item1": "Identify knowledge barriers about the illness.",
+            "item2": "Understand the level of awareness in specific cases.",
+            "item3": "Explore how much people know about mental health conditions."
+        },
+        "objective3": {
+            "title": "Product",
+            "item1": "Design a video game that raises awareness about mental health disorders.",
+            "item2": "Create gameplay focused on the illness as the main character.",
+            "item3": "Combine awareness, visibility, and entertainment in a single product."
+        },
+        "designProcessTitle": "Design Process",
+        "researchTitle": "Research",
+        "keyFindingsTitle": "Key Findings",
+        "keyFinding1": "Lack of information about mental health disorders.",
+        "keyFinding2": "Social stigma or rejection towards people with mental health issues.",
+        "keyFinding3": "Limited understanding and empathy toward these conditions.",
+        "methodologyTitle": "Methodology",
+        "methodology": "VIEDU",
+        "stat1": "Responses in quantitative survey",
+        "stat2": "Interviews with real users",
+        "stat3": "Users who tested the demo",
+        "definitionTitle": "Definition",
+        "projectTitle2": "The Project",
+        "projectItem1": "It has a 2D narrative focus, where the player takes the role of a protagonist with schizophrenia.",
+        "projectItem2": "The main objective is to distinguish what is truly real.",
+        "ideationTitle": "Ideation",
+        "storyTitle": "Theme and Story",
+        "storyItem1": "The main theme is the internal acceptance of schizophrenia and the search for mental balance.",
+        "storyItem2": "The world represents how the main character perceives reality.",
+        "designTitle": "Design",
+        "designItem1": "In the design phase, I translated the defined concepts into visual and functional solutions through wireframes and an interactive prototype.",
+        "sketchTitle": "Sketch",
+        "sketchDescription": "Level design sketch showing structure and possible interactive elements.",
+        "prototypeTitle": "Prototype",
+        "resultsTitle": "Results",
+        "resultsDescription": "A digital experience that allows anyone to become aware of these types of mental health conditions, learn, explore, and engage without intimidation. The game integrates mechanics, gradual education, and visibility to present these topics in an accessible, engaging, and entertaining way.",
+        "resultItem1": "Complete demo of the first level of the game, including gameplay, interaction, and story.",
+        "resultItem2": "Integrated narrative within secondary NPC characters.",
+        "resultItem3": "Real mechanics inspired by actual mental health conditions.",
+        "challengesTitle": "Challenges and Learnings",
+        "challengesDescription": "This project was both rewarding and challenging. Throughout the process, it was fulfilling to see how an initial idea gradually took shape and evolved with each iteration. Observing how research, design, and development came together to create a real solution helped me strengthen my skills, apply empathy and resilience, and trust in the creative process.",
+        "challengeItem1": "Working with mental health topics, although complex, can lead to interesting design ideas.",
+        "challengeItem2": "Implementing mental conditions into gameplay mechanics was challenging but very enjoyable.",
+        "challengeItem3": "I learned how to translate concepts and designs into functional code.",
+        "nextStepsTitle": "Next Steps",
+        "nextStep1": "Develop a full game exploring these topics in more depth.",
+        "nextStep2": "Release the game on platforms such as Steam or Play Store.",
+        "nextStep3": "Build a community to increase awareness and visibility of projects like this."
     }
 }
