--- a/assets/locales/es/translation.json
+++ b/assets/locales/es/translation.json
@@ -110,5 +110,80 @@
             "text": "Tu mensaje ha sido enviado correctamente. Me pondré en contacto contigo pronto.",
             "close": "Cerrar"
         }
+    },
+    "fragment": {
+        "title": "Fragmento | Mateo Bonilla",
+        "projectTitle": "Fragment - Metroidvania",
+        "categoryTitle": "CATEGORÍA",
+        "category1": "Desarrollo de Videojuegos",
+        "category2": "Diseño UX/UI",
+        "category3": "Narrativa",
+        "yearTitle": "AÑO",
+        "clientTitle": "CLIENTE",
+        "client": "Juego Independiente",
+        "description1": "Fragment es un metroidvania inspirado en la temática de la esquizofrenia. El jugador avanza para descubrir la historia mientras interactúa con diversos personajes que desafían su identidad y revelan quién es realmente.",
+        "description2": "Tecnologías y herramientas",
+        "video": "Video Promocional",
+        "menu": "Menú",
+        "pause": "Menú de Pausa",
+        "gameover": "Menú de Game Over",
+        "projects": "Proyectos",
+        "objectivesTitle": "Objetivos del proyecto",
+        "objective1": {
+            "title": "Propuesta",
+            "item1": "Dar a conocer una enfermedad tabú.",
+            "item2": "Crear un proyecto que visibilice la enfermedad.",
+            "item3": "Crear conciencia de que en ocasiones se puede llevar una vida normal."
+        },
+        "objective2": {
+            "title": "Investigación",
+            "item1": "Identificar las barreras de conocimiento sobre la enfermedad.",
+            "item2": "Conocer el nivel de entendimiento de algunos casos.",
+            "item3": "Explorar qué tanto conocen las personas sobre enfermedades mentales."
+        },
+        "objective3": {
+            "title": "Producto",
+            "item1": "Diseñar un videojuego que dé visibilidad a enfermedades mentales.",
+            "item2": "Crear un gameplay centrado en la enfermedad como personaje principal.",
+            "item3": "Integrar concienciación, visibilidad y entretenimiento en un solo producto."
+        },
+        "designProcessTitle": "Proceso de Diseño",
+        "researchTitle": "Investigación",
+        "keyFindingsTitle": "Hallazgos clave",
+        "keyFinding1": "Falta de información sobre las enfermedades mentales.",
+        "keyFinding2": "Tabú o rechazo hacia las personas con este tipo de problemas.",
+        "keyFinding3": "Falta de entendimiento o comprensión hacia estas condiciones.",
+        "methodologyTitle": "Metodología",
+        "methodology": "VIEDU",
+        "stat1": "Respuestas en encuesta cuantitativa",
+        "stat2": "Entrevistas con usuarios reales",
+        "stat3": "Usuarios que probaron el demo",
+        "definitionTitle": "Definición",
+        "projectTitle2": "El Proyecto",
+        "projectItem1": "Tiene un enfoque narrativo en 2D, donde el jugador asume el rol de un protagonista con esquizofrenia.",
+        "projectItem2": "El objetivo principal es distinguir qué es realmente real.",
+        "ideationTitle": "Ideación",
+        "storyTitle": "Tema e Historia",
+        "storyItem1": "El tema principal es la aceptación interna de la esquizofrenia y la búsqueda del equilibrio mental.",
+        "storyItem2": "El mundo representa cómo percibe la realidad el personaje principal.",
+        "designTitle": "Diseño",
+        "designItem1": "En la fase de diseño, traduje lo definido en soluciones visuales y funcionales mediante wireframes y un prototipo interactivo.",
+        "sketchTitle": "Boceto",
+        "sketchDescription": "Boceto del diseño de nivel y sus posibles elementos interactivos.",
+        "prototypeTitle": "Prototipo",
+        "resultsTitle": "Resultados",
+        "resultsDescription": "Una experiencia digital que permite a cualquier persona concienciarse sobre este tipo de enfermedades mentales, aprender, explorar e interactuar sin intimidación. El juego integra mecánicas, educación gradual y visibilidad, presentando estos temas de una forma accesible, atractiva y entretenida.",
+        "resultItem1": "Demo completo del primer nivel del videojuego, con jugabilidad, interacción e historia.",
+        "resultItem2": "Narrativa integrada dentro de los personajes secundarios (NPCs).",
+        "resultItem3": "Mecánicas reales basadas en enfermedades mentales.",
+        "challengesTitle": "Retos y Aprendizajes",
+        "challengesDescription": "Este proyecto fue tanto gratificante como desafiante. A lo largo del proceso fue enriquecedor ver cómo una idea inicial tomó forma y evolucionó con cada iteración. Observar cómo la investigación, el diseño y el desarrollo se integran para dar vida a una solución real me ayudó a fortalecer mis habilidades, aplicar empatía, resiliencia y confiar en el proceso creativo.",
+        "challengeItem1": "El contexto de las enfermedades mentales, aunque desafiante, puede generar ideas de diseño interesantes.",
+        "challengeItem2": "Implementar afecciones mentales en mecánicas jugables fue realmente difícil pero divertido.",
+        "challengeItem3": "Aprendí a plasmar ideas y diseños en código funcional.",
+        "nextStepsTitle": "Próximos Pasos",
+        "nextStep1": "Crear un videojuego completo que profundice más en este tipo de enfermedades.",
+        "nextStep2": "Lanzamiento en tiendas de videojuegos como Steam o Play Store.",
+        "nextStep3": "Crear una comunidad que genere mayor visibilidad para este tipo de proyectos."
     }
 }
