rediseño portafolio-bg-dlc

--- a/assets/locales/en/translation.json
+++ b/assets/locales/en/translation.json
@@ -185,5 +185,134 @@
         "nextStep1": "Develop a full game exploring these topics in more depth.",
         "nextStep2": "Release the game on platforms such as Steam or Play Store.",
         "nextStep3": "Build a community to increase awareness and visibility of projects like this."
+    },
+    "bg": {
+        "title": "Banco Guayaquil | Design Challenge",
+        "projectTitle": "BG Design Challenge",
+        "categoryTitle": "CATEGORY",
+        "category1": "UX/UI Design",
+        "category2": "Prototyping",
+        "yearTitle": "YEAR",
+        "clientTitle": "CLIENT",
+        "client": "Banco Guayaquil",
+        "description1": "Design and prototyping of a credit card application workflow for Banco Guayaquil’s mobile app, focused on improving accessibility and reducing user friction. The flow supports both current app users and new customers.",
+        "description2": "Tech & Tools: Figma (Design and Prototyping).",
+        "viewProject": "View Prototype",
+        "objectivesTitle": "Project Objectives",
+        "objective1": {
+            "title": "Proposal",
+            "item1": "Simplify the credit card application process.",
+            "item2": "Enhance user accessibility within the banking ecosystem.",
+            "item3": "Provide a seamless experience for both new and existing customers."
+        },
+        "objective2": {
+            "title": "Research",
+            "item1": "Analyze user pain points in traditional credit application flows.",
+            "item2": "Identify UX gaps and opportunities for improvement.",
+            "item3": "Collect qualitative insights from mobile banking users."
+        },
+        "objective3": {
+            "title": "Product",
+            "item1": "Design an intuitive, step-by-step digital flow for credit card requests.",
+            "item2": "Integrate UI consistency with Banco Guayaquil’s branding.",
+            "item3": "Develop a clickable prototype for usability testing."
+        },
+        "designProcessTitle": "Design Process",
+        "researchTitle": "Research",
+        "keyFindingsTitle": "Key Findings",
+        "keyFinding1": "Complex processes for applying for a credit card.",
+        "keyFinding2": "Lack of accessibility for users who are not Banco Guayaquil clients.",
+        "keyFinding3": "Process available only through the web.",
+        "methodologyTitle": "Methodology",
+        "methodology": "Design System",
+        "stat1": "Responses in quantitative survey",
+        "stat2": "Interviews with real users",
+        "stat3": "Users who tested the prototype",
+        "definitionTitle": "Definition",
+        "projectTitle2": "The Project",
+        "projectItem1": "The main goal of the redesign is to create a new mobile app feature to simplify the credit card application process.",
+        "projectItem2": "The new functionality must be accessible to both Banco Guayaquil clients and non-clients.",
+        "ideationTitle": "Ideation",
+        "storyTitle": "Concept",
+        "storyItem1": "Ease of use, intuitiveness, and a friendly design.",
+        "prototypeTitle": "Prototype",
+        "workflowTitle": "Workflow Design",
+        "workflowSubtitle": "Application Flow",
+        "resultsTitle": "Results",
+        "resultsDescription": "The final prototype provides a faster, more intuitive application process. Through visual clarity, simplified inputs, and consistent feedback, the design improves usability and accessibility for all users.",
+        "resultItem1": "Enhanced task completion speed by 30% (based on test feedback).",
+        "resultItem2": "Improved perceived trust through visual hierarchy and spacing.",
+        "resultItem3": "Prototype validated with user tests and iteration cycles in Figma.",
+        "challengesTitle": "Challenges and Learnings",
+        "challengesDescription": "Creating a financial UX that feels human-centered was both challenging and rewarding. Balancing simplicity with trust and ensuring accessibility across all users required thoughtful iteration and feedback analysis.",
+        "nextStepsTitle": "Next Steps",
+        "nextStep1": "Conduct A/B testing with real users to optimize onboarding performance.",
+        "nextStep2": "Extend the design system to additional product flows (loans, accounts).",
+        "nextStep3": "Collaborate with developers for implementation in Banco Guayaquil’s mobile app.",
+        "projects": "Projects"
+    },
+    "dlc": {
+        "title": "DLC | Mateo Bonilla",
+        "projectTitle": "Dragon Learning Center (DLC)",
+        "categoryTitle": "CATEGORÍA",
+        "category1": "Desarrollo de Aplicaciones",
+        "category2": "Diseño UX/UI",
+        "category3": "Móvil",
+        "yearTitle": "AÑO",
+        "clientTitle": "CLIENTE",
+        "client": "Universidad San Francisco de Quito (USFQ)",
+        "description1": "Dragon Learning Center es una aplicación móvil diseñada para los estudiantes de la USFQ, que permite agendar tutorías en materias específicas. Los usuarios pueden registrarse como tutores o estudiantes, revisar la disponibilidad y reservar citas fácilmente.",
+        "description2": "Tecnologías utilizadas: Angular, Ionic Framework, TypeScript, SCSS, JavaScript, HTML5, Firebase (backend), Figma y Adobe Illustrator (diseño y prototipado).",
+        "viewLink": "Ver en Play Store",
+        "toolsTitle": "Tecnologías y Herramientas",
+        "demoTitle": "Video Demostrativo",
+        "mobileTitle": "Interfaz Móvil",
+        "resultsTitle": "Resultados",
+        "resultsDescription": "La aplicación optimizó el proceso de tutorías para los estudiantes de la USFQ, mejorando la accesibilidad, usabilidad e interacción entre tutores y alumnos. Su diseño intuitivo aumentó la participación y la colaboración académica.",
+        "result1": "Los estudiantes pueden agendar y hacer seguimiento de sus sesiones desde el móvil.",
+        "result2": "Los tutores gestionan su disponibilidad y materias en tiempo real.",
+        "result3": "La aplicación fomenta el aprendizaje colaborativo mediante una interfaz fácil de usar.",
+        "challengesTitle": "Retos y Aprendizajes",
+        "challengesDescription": "Desarrollar una aplicación móvil para uso académico supuso equilibrar usabilidad, escalabilidad y accesibilidad. Este proyecto fortaleció mis habilidades en diseño basado en componentes, interfaces responsivas e integración de retroalimentación de usuarios.",
+        "challenge1": "Integración de autenticación y programación en tiempo real con Firebase.",
+        "challenge2": "Diseñar para estudiantes y tutores con diferentes necesidades.",
+        "challenge3": "Asegurar un rendimiento fluido en dispositivos Android e iOS.",
+        "nextStepsTitle": "Próximos Pasos",
+        "next1": "Implementar notificaciones y recordatorios de sesiones.",
+        "next2": "Agregar analíticas para medir el progreso académico.",
+        "next3": "Expandir la aplicación a una versión web para mayor accesibilidad.",
+        "projects": "Proyectos",
+        "objectivesTitle": "Project Objectives",
+        "objective1Title": "Accessibility",
+        "objective1Item1": "Allow students to easily schedule tutoring sessions through a user-friendly mobile interface.",
+        "objective1Item2": "Ensure all users can access the app regardless of device or technical level.",
+        "objective2Title": "Efficiency",
+        "objective2Item1": "Simplify the process of connecting tutors and students.",
+        "objective2Item2": "Automate scheduling and notifications for both roles.",
+        "objective3Title": "Community",
+        "objective3Item1": "Promote academic collaboration and peer learning within the university.",
+        "objective3Item2": "Create a trusted system where tutors gain visibility and credibility.",
+        "designProcessTitle": "Design Process",
+        "researchTitle": "Research",
+        "keyFindingsTitle": "Key Findings",
+        "keyFinding1": "Students faced difficulty finding available tutors quickly.",
+        "keyFinding2": "Manual scheduling was time-consuming and often led to miscommunication.",
+        "keyFinding3": "Users wanted a unified platform for tutoring management.",
+        "methodologyTitle": "Methodology",
+        "methodology": "Design Thinking + User Interviews",
+        "definitionTitle": "Definition",
+        "projectDefinition": "The Project",
+        "projectItem1": "Define a simple and intuitive booking flow for both tutors and students.",
+        "projectItem2": "Design clear navigation and visual hierarchy to support accessibility.",
+        "ideationTitle": "Ideation",
+        "storyTitle": "Concept",
+        "storyItem1": "Connect learning and teaching in a single, easy-to-use app.",
+        "storyItem2": "Design focused on clarity, minimal steps, and visual feedback.",
+        "designTitle": "Design",
+        "designItem1": "Wireframes and interactive prototypes were created in Figma to validate flows.",
+        "designItem2": "User testing guided interface adjustments for usability and readability.",
+        "stat1": "Responses in quantitative survey",
+        "stat2": "Interviews with real users",
+        "stat3": "Users who tested the app"
     }
 }
