--- a/assets/locales/es/translation.json
+++ b/assets/locales/es/translation.json
@@ -185,5 +185,134 @@
         "nextStep1": "Crear un videojuego completo que profundice más en este tipo de enfermedades.",
         "nextStep2": "Lanzamiento en tiendas de videojuegos como Steam o Play Store.",
         "nextStep3": "Crear una comunidad que genere mayor visibilidad para este tipo de proyectos."
+    },
+    "bg": {
+        "title": "Banco Guayaquil | Desafío de Diseño",
+        "projectTitle": "BG Design Challenge",
+        "categoryTitle": "CATEGORÍA",
+        "category1": "Diseño UX/UI",
+        "category2": "Prototipado",
+        "yearTitle": "AÑO",
+        "clientTitle": "CLIENTE",
+        "client": "Banco Guayaquil",
+        "description1": "Diseño y prototipado de un flujo de solicitud de tarjeta de crédito para la aplicación móvil de Banco Guayaquil, enfocado en mejorar la accesibilidad y reducir la fricción del usuario. El flujo admite tanto a usuarios actuales de la app como a nuevos clientes.",
+        "description2": "Tecnología y Herramientas: Figma (Diseño y Prototipado).",
+        "viewProject": "Ver Prototipo",
+        "objectivesTitle": "Objetivos del Proyecto",
+        "objective1": {
+            "title": "Propuesta",
+            "item1": "Simplificar el proceso de solicitud de tarjetas de crédito.",
+            "item2": "Mejorar la accesibilidad del usuario dentro del ecosistema bancario.",
+            "item3": "Proporcionar una experiencia fluida para nuevos y actuales clientes."
+        },
+        "objective2": {
+            "title": "Investigación",
+            "item1": "Analizar los puntos de dolor de los usuarios en los flujos tradicionales de solicitud.",
+            "item2": "Identificar brechas y oportunidades de mejora en la experiencia de usuario.",
+            "item3": "Recopilar información cualitativa de usuarios de banca móvil."
+        },
+        "objective3": {
+            "title": "Producto",
+            "item1": "Diseñar un flujo digital intuitivo y paso a paso para solicitar tarjetas de crédito.",
+            "item2": "Integrar consistencia visual acorde con la identidad de Banco Guayaquil.",
+            "item3": "Desarrollar un prototipo interactivo para pruebas de usabilidad."
+        },
+        "designProcessTitle": "Proceso de Diseño",
+        "researchTitle": "Investigación",
+        "keyFindingsTitle": "Hallazgos Clave",
+        "keyFinding1": "Procesos complicados para solicitar una tarjeta de crédito.",
+        "keyFinding2": "Falta de facilidad para aquellos que no son clientes de Banco Guayaquil.",
+        "keyFinding3": "Proceso disponible únicamente por la web.",
+        "methodologyTitle": "Metodología",
+        "methodology": "Design System",
+        "stat1": "Respuestas en encuesta cuantitativa",
+        "stat2": "Entrevistas con usuarios reales",
+        "stat3": "Usuarios que probaron el prototipo",
+        "definitionTitle": "Definición",
+        "projectTitle2": "El Proyecto",
+        "projectItem1": "El principal objetivo del rediseño es crear una nueva funcionalidad en la aplicación móvil para facilitar el trámite de las tarjetas de crédito.",
+        "projectItem2": "Se debe considerar que la nueva funcionalidad sea útil tanto para clientes como para no clientes de Banco Guayaquil.",
+        "ideationTitle": "Ideación",
+        "storyTitle": "Concepto",
+        "storyItem1": "Facilidad, intuición y diseño amigable.",
+        "prototypeTitle": "Prototipo",
+        "workflowTitle": "Diseño del Flujo",
+        "workflowSubtitle": "Flujo de Solicitud",
+        "resultsTitle": "Resultados",
+        "resultsDescription": "El prototipo final ofrece un proceso de solicitud más rápido e intuitivo. Mediante claridad visual, entradas simplificadas y retroalimentación coherente, el diseño mejora la usabilidad y accesibilidad para todos los usuarios.",
+        "resultItem1": "Incremento del 30% en la velocidad de finalización de tareas (según pruebas).",
+        "resultItem2": "Mayor percepción de confianza mediante jerarquía visual y espaciado.",
+        "resultItem3": "Prototipo validado con pruebas de usuario y ciclos de iteración en Figma.",
+        "challengesTitle": "Retos y Aprendizajes",
+        "challengesDescription": "Crear una experiencia financiera centrada en el usuario fue tanto desafiante como gratificante. Equilibrar la simplicidad con la confianza y garantizar accesibilidad para todos los usuarios requirió iteraciones y análisis de retroalimentación cuidadosos.",
+        "nextStepsTitle": "Próximos Pasos",
+        "nextStep1": "Realizar pruebas A/B con usuarios reales para optimizar el rendimiento del flujo.",
+        "nextStep2": "Extender el sistema de diseño a otros flujos de producto (créditos, cuentas).",
+        "nextStep3": "Colaborar con el equipo de desarrollo para la implementación en la app móvil de Banco Guayaquil.",
+        "projects": "Proyectos"
+    },
+    "dlc": {
+        "title": "DLC | Mateo Bonilla",
+        "projectTitle": "Dragon Learning Center (DLC)",
+        "categoryTitle": "CATEGORY",
+        "category1": "App Development",
+        "category2": "UX/UI Design",
+        "category3": "Mobile",
+        "yearTitle": "YEAR",
+        "clientTitle": "CLIENT",
+        "client": "USFQ (Universidad San Francisco de Quito)",
+        "description1": "Dragon Learning Center is a mobile application designed for USFQ students to schedule tutoring sessions in specific subjects. Users can register as tutors or students, check availability, and easily book appointments.",
+        "description2": "Tech stack: Angular, Ionic Framework, TypeScript, SCSS, JavaScript, HTML5, Firebase (backend), Figma, and Adobe Illustrator (design & prototyping).",
+        "viewLink": "View on Play Store",
+        "toolsTitle": "Tech & Tools",
+        "demoTitle": "Demo Video",
+        "mobileTitle": "Mobile Interface",
+        "resultsTitle": "Results",
+        "resultsDescription": "The app successfully streamlined the tutoring process for USFQ students, improving accessibility, usability, and interaction between tutors and learners. Its intuitive design enhanced engagement and academic collaboration.",
+        "result1": "Students can schedule and track sessions directly from their phones.",
+        "result2": "Tutors can manage availability and subjects in real time.",
+        "result3": "The app encourages collaborative learning through an easy-to-use interface.",
+        "challengesTitle": "Challenges & Learnings",
+        "challengesDescription": "Developing a mobile app for academic use was a challenge in balancing usability, scalability, and accessibility. The project reinforced my skills in component-based design, responsive interfaces, and effective user feedback integration.",
+        "challenge1": "Integrating Firebase authentication and real-time scheduling.",
+        "challenge2": "Designing for both students and tutors with different needs.",
+        "challenge3": "Ensuring smooth performance on Android and iOS devices.",
+        "nextStepsTitle": "Next Steps",
+        "next1": "Implement notifications and reminders for sessions.",
+        "next2": "Add analytics to track academic improvement.",
+        "next3": "Expand to a web platform for broader accessibility.",
+        "projects": "Proyectos",
+        "objectivesTitle": "Objetivos del Proyecto",
+        "objective1Title": "Accesibilidad",
+        "objective1Item1": "Permitir que los estudiantes agenden tutorías fácilmente mediante una interfaz móvil amigable.",
+        "objective1Item2": "Asegurar que todos los usuarios puedan acceder a la app sin importar el dispositivo o nivel técnico.",
+        "objective2Title": "Eficiencia",
+        "objective2Item1": "Simplificar el proceso de conexión entre tutores y estudiantes.",
+        "objective2Item2": "Automatizar la programación y notificaciones para ambos roles.",
+        "objective3Title": "Comunidad",
+        "objective3Item1": "Fomentar la colaboración académica y el aprendizaje entre pares dentro de la universidad.",
+        "objective3Item2": "Crear un sistema confiable donde los tutores obtengan visibilidad y credibilidad.",
+        "designProcessTitle": "Proceso de Diseño",
+        "researchTitle": "Investigación",
+        "keyFindingsTitle": "Hallazgos Clave",
+        "keyFinding1": "Los estudiantes tenían dificultades para encontrar tutores disponibles rápidamente.",
+        "keyFinding2": "La programación manual tomaba tiempo y causaba confusiones.",
+        "keyFinding3": "Los usuarios querían una plataforma unificada para la gestión de tutorías.",
+        "methodologyTitle": "Metodología",
+        "methodology": "Design Thinking + Entrevistas con Usuarios",
+        "definitionTitle": "Definición",
+        "projectDefinition": "El Proyecto",
+        "projectItem1": "Definir un flujo de simple e intuitivo para tutores y estudiantes.",
+        "projectItem2": "Diseñar navegación clara y jerarquía visual para mejorar la accesibilidad.",
+        "ideationTitle": "Ideación",
+        "storyTitle": "Concepto",
+        "storyItem1": "Conectar el aprendizaje y la enseñanza en una app fácil de usar.",
+        "storyItem2": "Diseño centrado en claridad, pocos pasos y retroalimentación visual.",
+        "designTitle": "Diseño",
+        "designItem1": "Se crearon wireframes y prototipos interactivos en Figma para validar los flujos.",
+        "designItem2": "Las pruebas con usuarios guiaron los ajustes de interfaz para mejorar la usabilidad y legibilidad.",
+        "stat1":"Respuestas en encuesta cuantitativa",
+        "stat2":"Entrevistas con usuarios reales",
+        "stat3":"Usuarios que probaron la app"
     }
 }
